Bug 51576 - [4.7 Regression] Bootstrap failure with go
Summary: [4.7 Regression] Bootstrap failure with go
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.0
Assignee: Jakub Jelinek
URL:
Keywords: ice-on-valid-code
: 51575 51592 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-16 11:12 UTC by Jakub Jelinek
Modified: 2011-12-16 23:12 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2011-12-16 00:00:00


Attachments
gcc47-pr51576.patch (323 bytes, patch)
2011-12-16 11:15 UTC, Jakub Jelinek
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jakub Jelinek 2011-12-16 11:12:09 UTC
sha1.go (and other cryptos) fail to bootstrap at least on i686-linux, with:
../../../libgo/go/crypto/sha1/sha1.go: In function ‘sha1.Sum.pN24_libgo_crypto.sha1.digest’:
../../../libgo/go/crypto/sha1/sha1.go:82:1: error: statement marked for throw, but doesn’t
# .MEM_130 = VDEF <.MEM_80>
*tmp_8[0] = iftmp.106_128;
Comment 1 Jakub Jelinek 2011-12-16 11:15:12 UTC
Created attachment 26106 [details]
gcc47-pr51576.patch

Fix I'm going to bootstrap/regtest momentarily.
Comment 2 Jakub Jelinek 2011-12-16 15:20:38 UTC
Author: jakub
Date: Fri Dec 16 15:20:35 2011
New Revision: 182403

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=182403
Log:
	PR tree-optimization/51576
	* tree-cfg.c (replace_uses_by): Call maybe_clean_or_replace_eh_stmt
	even if fold_stmt didn't change anything.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/tree-cfg.c
Comment 3 Jakub Jelinek 2011-12-16 15:50:37 UTC
Fixed.
Comment 4 Jakub Jelinek 2011-12-16 16:39:46 UTC
*** Bug 51575 has been marked as a duplicate of this bug. ***
Comment 5 Ian Lance Taylor 2011-12-16 23:12:14 UTC
*** Bug 51592 has been marked as a duplicate of this bug. ***