	PR tree-optimization/51576 	* tree-cfg.c (replace_uses_by): Call maybe_clean_or_replace_eh_stmt 	even if fold_stmt didn't change anything.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182403 138bc75d-0d04-0410-961f-82ee72b054a4